force-app/main/default/objects/PDRI__Event_Control__c/PDRI__Event_Control__c.object-meta.xml
<CustomObject>
    <label>Event Control</label>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>Event Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>