force-app/main/default/objects/PDRI__Event_Control__c/fields/PDRI__All_Events__c.field-meta.xml
<CustomField>
    <fullName>PDRI__All_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate All Events</label>
    <type>Checkbox</type>
</CustomField>