force-app/main/default/objects/PDRI__Event_Control__c/fields/PDRI__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>