force-app/main/default/objects/PDRI__Event_Control__c/fields/PDRI__Scope__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Scope__c</fullName>
    <label>Event Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Set</fullName>
            </value>
            <value>
                <fullName>Data Set Element</fullName>
            </value>
            <value>
                <fullName>Deployment Plan</fullName>
                <default>true</default>
                <label>Deployment Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>