force-app/main/default/objects/PDRI__Event_Control__c/fields/PDRI__Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Triggers</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Workflows</fullName>
            </value>
            <value>
                <fullName>Duplicate Rules</fullName>
            </value>
            <value>
                <fullName>Processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>